--- a/source/sass/blocks/appfeat-desc.scss
+++ b/source/sass/blocks/appfeat-desc.scss
@@ -1,6 +1,38 @@
+.appfeat-desc {
+  padding: 85px 15px 325px;
+
+}
+
+
+.appfeat-desc__inner {
+  padding-right: 20px;
+  padding-left: 20px;
+
+}
+
+
 .appfeat-desc__list {
   margin: 0;
   padding: 0;
   list-style: none;
 
 }
+
+
+.appfeat-desc__heading {
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: center;
+
+
+}
+
+
+.appfeat-desc__text {
+  margin-top: 0;
+  margin-bottom: 40px;
+  text-align: center;
+
+}
+
+
