--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,6 +1,34 @@
+.review {
+  padding-top: 50px;
+
+}
+
+
 .review__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+}
+
+
+.review__item {
+  display: inline-block;
+
+}
+
+
+.review__item-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: center;
+
+}
+
+
+.review__item-text {
+  margin-top: 0;
+  margin-bottom: 40px;
+  text-align: center;
 
 }
