Задали базовые стили секции photofeed (включая стили входящих в него независимых блоков)

--- a/source/sass/blocks/photoshare.scss
+++ b/source/sass/blocks/photoshare.scss
@@ -1,6 +1,25 @@
+.photoshare__inner {
+  padding-right: 20px;
+  padding-left: 20px;
+
+}
+
+
 .photoshare__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+}
+
+
+.photoshare__imgfull-link {
+  display: block;
+
+}
+
+
+.photoshare__img-prev {
+  display: block;
 
 }
