--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,31 @@
 .page-header {
+  position: relative;
+  z-index: 0;
+  margin-top: 265px;
   background: $bg-primary url("../../img/bg-back-mobile@1x.jpg") no-repeat top;
 
 }
 
+
+.page-header__top {
+  position: relative;
+  top: -265px;
+  padding: 20px 0;
+  background-color: $bg-primary;
+  border-bottom: 1px solid #000000;
+  box-shadow: 0 1px 0 1px rgba(255, 255, 255, 0.1);
+
+}
+
+
+.page-header__top-inner {
+  padding-right: 20px;
+  padding-left: 20px;
+
+}
+
+
+.page-header__btm-img {
+  padding-top: 100px;
+
+}
