Откорректировали стили блоков относящихся к index.html

--- a/source/sass/blocks/appfeat-heading.scss
+++ b/source/sass/blocks/appfeat-heading.scss
@@ -12,14 +12,14 @@
 
 
 .appfeat-heading__holder {
-  padding: 45px 35px 30px;
+  padding: 40px 35px;
 
 }
 
 
 .appfeat-heading__quest {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   text-align: center;
 
 }
@@ -27,7 +27,7 @@
 
 .appfeat-heading__exclam {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   text-align: center;
 
 }
