--- a/source/sass/blocks/contact-us.scss
+++ b/source/sass/blocks/contact-us.scss
@@ -1,6 +1,6 @@
 .contact-us {
-  padding-top: 45px;
-  padding-bottom: 80px;
+  padding-top: 40px;
+  padding-bottom: 45px;
   background-color: $bg-secondary;
 
 }
@@ -20,7 +20,7 @@
 
 .contact-us__heading-quest {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0;
   text-align: center;
 
 }
@@ -28,7 +28,7 @@
 
 .contact-us__heading-exclam {
   margin-top: 0;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   text-align: center;
 
 }
@@ -41,14 +41,26 @@
 
 .contact-us__heading {
   margin-top: 0px;
-  margin-bottom: 3px;
+  margin-bottom: 0;
 
 }
 
 
 .contact-us__info {
   display: inline-block;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+
+}
+
+
+.contact-us__info-phone {
+  color: $accent-color;
+
+}
+
+
+.contact-us__info-email{
+  color: $accent-color;
 
 }
 
@@ -56,6 +68,7 @@
 .contact-us__info-address {
   display: inline-block;
   margin-bottom: 25px;
+  color: $accent-color;
 
 }
 
