--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -1,6 +1,6 @@
 .user-info {
   margin-bottom: 20px;
-  padding: 25px 14px;
+  padding: 20px 15px;
   background-color: $bg-secondary-shade;
 
 }
@@ -8,7 +8,7 @@
 .user-info__heading-name {
   display: inline-block;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 2px;
 
 }
 
